--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 SECRET_JWT=eyJhbGciOiJSUzI1NiIsImtpZCI6IjJiZjg0MThiMjk2M2
+
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_DATABASE=recrutement_axopen
+PORT = 8080
