--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "mysql2": "2.3.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "1.20.0",
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "express": "4.18.1",
     "express-jwt": "7.7.5",
-    "jsonwebtoken": "8.5.1"
+    "jsonwebtoken": "8.5.1",
+    "mysql2": "2.3.3"
   },
   "devDependencies": {
     "@types/express": "4.17.13",
